--- a/src/demo/gauge.html
+++ b/src/demo/gauge.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>auge</title>
+		<title>gauge</title>
 		<style type="text/css">*{padding:0; margin:0;}</style>
 		<script type="text/javascript">
 			onload = function(){
